--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.47.0",
     "@payloadcms/next": "3.47.0",
     "@payloadcms/payload-cloud": "3.47.0",
     "@payloadcms/richtext-lexical": "3.47.0",
     "@payloadcms/ui": "3.47.0",
+    "@supabase/supabase-js": "^2.51.0",
     "cross-env": "^7.0.3",
-    "dotenv": "16.4.7",
+    "dotenv": "^16.4.7",
     "graphql": "^16.8.1",
     "next": "15.3.2",
-    "payload": "3.47.0",
+    "payload": "^3.47.0",
+    "pg": "^8.16.3",
     "react": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-postgres": "3.47.0"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
@@ -58,5 +60,11 @@
       "esbuild",
       "unrs-resolver"
     ]
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": ""
 }
