--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "dotenv": "^16.4.7",
     "graphql": "^16.8.1",
     "next": "15.3.2",
+    "node-fetch": "^3.3.2",
     "payload": "^3.47.0",
     "pg": "^8.16.3",
-    "react": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react": "4.5.2",
